# learn-copilotkit-agui

./: README.md
backend/: .gitignore  README.md  main.py  pyproject.toml
backend/src/features/agent/: router.py
backend/src/features/agent/utils/: sse.py
backend/test/: test_agent.py
frontend/: .gitignore  .prettierrc.json  README.md  eslint.config.mjs  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/copilotkit/: route.ts
frontend/src/components/ui/: button.tsx  calendar.tsx
frontend/src/features/auth/: AuthProvider.tsx  Login.tsx
frontend/src/features/chat/: Chat.tsx
frontend/src/features/chat/components/: CustomAssistantMessage.tsx  DateSelector.tsx  GetTimeResult.tsx  SpotList.tsx
frontend/src/features/chat/hooks/: useCustomPrompt.tsx  useCustomStates.tsx  useCustomTools.tsx
frontend/src/features/spot/: SpotManager.tsx
