[project]
name = "learn-copilotkit-agui-backend"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.4",
    "uvicorn>=0.40.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.12.1",
    "pytest>=8.0.0",
    "pyright>=1.1.403",
]


[tool.ruff]
target-version = "py312"
line-length = 88
include = ["src/**/*.py"]
extend-include = ["main.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
    "PTH",    # flake8-use-pathlib
    "PL",     # Pylint
]
ignore = [
    # "E501",  # line too long, handled by black
    # "G004",  # Logging statement uses string formatting.
    # "F821", # Undefined name
    # "C401", # Unnecessary generator (use a list/set/dict comprehension instead).
    # "C408", # Unnecessary dict call (use a dict literal instead).
    # "RUF001",  # Ambiguous Unicode character in string.
    # "RUF002",  # Ambiguous Unicode character in docstring.
    # "RUF003",  # Ambiguous Unicode character in comment.
    # "PERF203", # Use of unnecessary comprehensions.
    # "PERF401", # Use of unnecessary list comprehension.
    # "PLR2004", # Magic value used in comparison.
    # "PLC2401", # Non-conventional variable name.
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.pyright]
include = ["src", "test"]
exclude = [".venv", "**/__pycache__"]
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "basic"
